# dataset

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
data/alpaca/: alpaca.jsonl
data/squad/: plausible_translated.jsonl  plausible_translated_answer.jsonl  plausible_translated_answer_fixed.jsonl  translated.jsonl
prompts/alpaca/: alpaca.txt
prompts/squad/: answerable.txt  plausible.txt
script/squad/: add_no.py  clean.py  fix_bracket.py  graph_translate.py  plausible_graph_translate.py  plausible_translate.py  temp.py  temp2.py  temp3.py  translate.py
src/script/: chat_gpt_ui.py  util.py
src/script/alpaca/: alpaca.py  check_alpaca.py  clean.py  get_alpaca.py  to_fix.txt
src/script/squad/: answer.py  check_answer.py  check_plausible_answer.py  chunk.py  get_answer.py  get_plausible_answer.py  plausible_answer.py
src/script/squad/answer/: compare.py  fix_error_answer.py  get_error_answer.py  merge.py
src/script/squad/related/: compare_related_data.py  fix_related_data.py  get_related_data.py  merge_data.py
