[project]
name = "dataset"
version = "0.1.0"
description = ""
authors = [
    {name = "Wai Yan Min Khaing",email = "waiyanminkhaing1997@gmail.com"}
]
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.11.6"
mypy = "^1.15.0"

